--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
 
   mysql:
     image: mysql:5.7
-    restart: always 
+    restart: always
     env_file:
-      - ./mysql.env
+      - ./mysql-container.env
     volumes:
       - mysql_data:/var/lib/mysql
     
@@ -14,7 +14,7 @@ services:
     build: .
     command: sh -c "sleep 5s; flask run --host=0.0.0.0 --reload" 
     ports:
-      - 3000:3000
+      - 5000:5000
     depends_on:
       - mysql
     env_file:
